# python_django_diploma

./: .gitignore  db.sqlite3  pyproject.toml
api/: admin.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
api/fixtures/: fixtures.json
api/migrations/: 0001_initial.py  0002_productimage.py  0003_review.py  0004_alter_review_rate.py  0005_category_product_available_subcategory_productsale_and_more.py  0005_category_subcategory.py  0006_alter_category_category_id_and_more.py  0006_product_category.py  0007_alter_category_src.py  0007_rename_category_id_category_id_and_more.py  0008_alter_category_src.py  0008_product_limited.py  0009_alter_product_description.py  0009_productsale.py  0010_alter_productsale_datefrom.py  0010_productspecifications.py  0011_basket.py  0012_rename_quantity_basket_count.py  0013_order_alter_product_date_delete_basket_and_more.py  0014_alter_order_phone.py  0015_remove_order_products_orderitem_order_items.py  0016_remove_order_items_alter_orderitem_order.py  0017_order_address.py  0018_orderitem_date.py  0019_basket_remove_orderitem_order_and_more.py  0020_alter_basket_product.py  0021_profile_order.py  0022_alter_profile_phone.py  0023_alter_order_payment_type_alter_order_status_and_more.py  0024_remove_order_products.py  0025_alter_order_payment_type_alter_order_status.py  0026_alter_order_status.py  0027_alter_order_payment_type_alter_order_status.py  0028_order_email_order_fullname_order_phone_and_more.py  0029_remove_order_phone.py  0033_payment.py  (+10 more)
python_django_diploma/: asgi.py  settings.py  urls.py  wsgi.py
